# -

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: blade.h  myFunction.h  myLine.h  runeVideoProcessor.h  rune_detect.h
src/: blade.cpp  myFunction.cpp  myLine.cpp  runeVideoProcessor.cpp  rune_detect.cpp
